# darktrace

./: CONTRIBUTING.md  LICENSE  README.md  TUTORIAL.md  __init__.py  config.json  config.py  pyproject.toml  requirements.txt  test.py  verify_install.py
analysis/: calculate.py  plotting.py
darktrace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: api_reference.md
edge/: __init__.py  angular_momentum_tagging.py  binding_energy_tagging.py  spatial_tagging.py
examples/: config_demo.py  tutorial_1_getting_started.py
tagging/: __init__.py  angular_momentum_tagging.py  angular_momentum_tagging_HYDRO_ARRAYS.py  angular_momentum_tagging_HYDRO_DM.py  angular_momentum_tagging_hydrodynamic_sim.py  binding_energy_tagging.py  spatial_tagging.py  tagging_wrapper_func.py
