[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darktrace"
version = "0.1.0"
description = "Particle tagging for dark matter simulations"
packages = ["darktrace"]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0"
]

[project.optional-dependencies]
astrophysics = ["pynbody", "tangos", "darklight"]

[tool.setuptools.package-data]
darktrace = ["config/config.json"]