[build-system]
requires = ["hatchling>=1.17"]
build-backend = "hatchling.build"

[project]
name = "darktag"
version = "1.0.2"
description = "Particle tagging for dark matter simulations"
readme = "README.md"

authors = [
    {name = "Sushanta Nigudkar"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy"
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
    "scikit-learn>=0.24.0",
    "pynbody>=2.1",
    "tangos>=1.10.0"
]


keywords = ["astronomy", "astrophysics", "particle-tagging", "dark-matter", "simulations", "stellar-mass"]

[project.urls]
Homepage = "https://github.com/nsushantnigudkar/darktag"
Repository = "https://github.com/nsushantnigudkar/darktag"
Issues = "https://github.com/nsushantnigudkar/darktag/issues"

[tool.hatch.build.targets.sdist]
include = ["LICENSE", "README.md", "darktag/**/*", "config.py", "config.json"]

[tool.hatch.build.targets.wheel]
include = ["darktag/**/*", "config.py", "config.json"]



